--- a/css/slider.css
+++ b/css/slider.css
@@ -1,61 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300|Roboto');
-
-.place:before {
-  content: '';
-  display: inline-block;
-  height: 100%;
-  vertical-align: middle;
-}
-
-.place {
-  text-align: center;
-}
-
-.slider {
-  font-family: 'Fira Sans', sans-serif;
-  color: white;
-  width: 500px;
-  height: 300px;
-  background-color: #E54C85;
-  border-radius: 10px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.button{
-  position: absolute;
-  height: 32px;
-  width: 32px;
-  margin-left: 20px;
-  margin-right: 0px;
-  background: url(../img/arrow.png) no-repeat;
-  background-size: 24px;
-}
-
-.lang{
-
-}
-
-.close{
-  position: absolute;
-  height: 32px;
-  width: 32px;
-  margin-left: 450px;
-  margin-right: 20px;
-  background: url(../img/close.png) no-repeat;
-  background-size: 24px;
-}
-
-.Text{
-  position: relative;
-  margin-left: 50px;
-  margin-top: 40px;
-}
-
-.bold{
+.wrapper{
   
-}
-
-.light{
-
 }
