--- a/css/slider.css
+++ b/css/slider.css
@@ -1,3 +1,91 @@
-.wrapper{
-  
+body{
+  background-color: black;
+}
+
+.social{
+  width: 600px;
+  height: 340px;
+  background-color: #E54C85;
+  border-radius: 10px;
+  position: absolute;
+}
+
+.social__nav{
+  margin-top: 10px;
+}
+
+.social__nav__back{
+  width: 25px;
+  height: 25px;
+  background-image: url(../img/arrow.png);
+  background-size: 25px;
+  margin-left: 20px;
+  float: left;
+}
+
+.social__nav__eng{
+  position: absolute;
+  margin-left: 275px;
+}
+
+.social__nav__ru{
+  position: absolute;
+  margin-left: 305px;
+}
+
+.social__nav__close{
+  width: 25px;
+  height: 25px;
+  background-image: url(../img/close.png);
+  background-size: 25px;
+  float: right;
+  margin-right: 20px;
+}
+
+.social__content{
+  margin-left: 60px;
+  margin-top: 60px;
+}
+
+.social__content__image{
+  float: right;
+  margin-right: 40px;
+  margin-top: 30px;
+}
+
+.social__content__text{
+  width: 240px;
+  float: left;
+}
+
+.social__bar{
+  margin-top: 250px;
+}
+
+li{
+  width: 50px;
+  height: 50px;
+  list-style-type: none;
+  display: inline-block;
+  margin-right: 10px;
+}
+
+.inst{
+  background-image: url(../img/inst.png);
+  background-size: 50px;
+}
+
+.inst:hover{
+  background-image: url(../img/instHover.png);
+  background-size: 50px;
+}
+
+.youtube{
+  background-image: url(../img/youtube.png);
+  background-size: 50px;
+}
+
+.youtube:hover{
+  background-image: url(../img/youtubeHover.png);
+  background-size: 50px;
 }
